# gpto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.md  codecov.yml  manual_test.sh  push_aur.sh  setup_aur.sh  test.sh  update_test.sh
src/: config.rs  main.rs  prompt.rs  request.rs
tests/: gpto.cfg
