[package]
name = "gpto"
version = "0.1.7"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2021"
license = "MIT"
description = "A tiny unofficial OpenAI client"
readme = "README.md"
homepage = "https://github.com/alanvardy/gpto"
repository = "https://github.com/alanvardy/gpto"
keywords = ["cli", "openai", "client", "gpt"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
dirs = "5.0"
matches = "0.1.10"
regex = "1"
chrono = "0.4.26"
chrono-tz = "0.8.3"
colored = "2.0.4"
clap = "4.4.0"
rand = "0.8.5"
spinners = "4.1.0"
inquire = "0.6.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
