[package]
name = "gpto"
version = "0.2.2"
authors = ["Alan Vardy <alan@vardy.cc>"]
edition = "2021"
license = "MIT"
description = "A tiny unofficial OpenAI client"
readme = "README.md"
homepage = "https://github.com/alanvardy/gpto"
repository = "https://github.com/alanvardy/gpto"
keywords = ["cli", "openai", "client", "gpt"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
dirs = "5.0"
matches = "0.1.10"
regex = "1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
colored = "2.2.0"
clap = { version = "4.5.41", features = ["derive"] }
rand = "0.9.1"
spinners = "4.1.1"
inquire = "0.7.5"

[dev-dependencies]
pretty_assertions = "1.4.1"
